Correcciones qodana